--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
   <head>
- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/></link>
-  <link><link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"></link>
+<link rel="stylesheet" type="text/css" href="style.css">
   </head>
 <body>
 <header><!--Intro-->
@@ -9,9 +8,9 @@
 I beleive in growth.<br></h1>
 <!--Intro-->
 <nav ul style="list-style-type: none">
-<button><a href="#My skills">My skills</a></button>
-<button><a href="#My projects">My projects</a></button>
-<button><a href="#contact">contact/hire me</a></button>
+<button><a href="#My skills">my skills</a></button>
+<button><a href="#My skills">my projects</a></button>
+<button><a href="#contact">contact me</a></button>
 </nav>
   </header>
 </div>
